2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Makefile.am' where the 'webhost.pc' pkgconfig
	control file was not installed as part of the 'make install' target.
2016-01-25 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.2.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'WHCgiPost::currentTime(); method in 'wh/whcgipost.cpp'
	to handle variant output styles of the timedatectl(1) command.
2016-01-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.3.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/wh/whcgipost.cpp' that caused the list
	of available timezones to have an empty entry at the end.
2016-01-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.4.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHInterfaceMacAddress()' and 'WHMacAddressText()' functions
	in 'src/wh/whnetwork.cpp' and 'wrc/wh/whnetwork.h'.
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Upgrade' service to use '--oldpackage' instead of
	'--force' when invoking rpm(8).
2016-01-28 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.5.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Added 'WHInterfaceInfo()', 'WHInterfaceIPv4Address()' and
	'WHInterfaceIPv4Netmask()' functions in 'wh/whnetwork.cpp' and
	'wh/whnetwork.h'.
	* Added a 'WHConfig' class in 'src/wh/whconfig.cpp' and
	'src/wh/whconfig.h'.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the API version to 1:0:1.
	* Incremented the package version to 0.8.6.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'webhost.spec.in' that broke the 'make rpm'
	target.
2016-01-31 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.7.