@@ -1,0 +1,20 @@
+<html>
+<head>
+  <title>Webhost FileDrop Test Harness</title>
+</head>
+<body>
+  <form action="/cgi-bin/filedrop.cgi" method="post" enctype="multipart/form-data">
+    <tr>
+      <td align="right">FILENAME:</td>
+      <td><input type="file" name="FILENAME" size="20" maxlength="64"></td>
+    </tr>
+    <tr>
+      <td colspan="2" align="right">&nbsp;</td>
+    </tr>
+    <tr>
+      <td colspan="2" align="right"><input type="submit" value="OK"></td>
+    </tr>
+</table>
+</form>
+</body>
+</html>
