@@ -172,3 +172,7 @@
 	target.
 2016-01-31 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.8.7.
+2016-02-03 Fred Gleason <fredg@paravelsystems.com>
+	* Modified the 'WHCgiPost::sendUpgradeCommand()' method to
+	wait until package upgrade is complete before returning.
+	* Added a 'filedrop.cgi' CGI test in 'src/tests/'.
